# sftpovw

./: .gitignore  README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: branch.yml  main.yml  tag.yml
sftpovw/: fs.py  main.py  version.py
tests/: test_1.py  test_fs.py
