[metadata]
name = sftpovw
version = attr: sftpovw.version.VERSION
url = https://github.com/wtnb75/sftpovw
author = Watanabe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = write safer, sftp
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: System :: Networking
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  sftpovw=sftpovw.main:cli
